tree-sitter-gsql/grammar.js
    source_file: $ => repeat(choice($._top_level_statement, ';')),

    _top_level_statement: $ => choice(
      $.vertex_definition,
      $.edge_definition,
      $.graph_definition,
      $.typedef_statement,
      $.query_definition,
      $.opencypher_query_definition,
      $.interpret_query_statement,
      $.loading_job_definition,
      $.schema_change_job_definition,
      $.data_source_definition,
      $.package_definition,
      $.use_statement,
      $.install_query_statement,
      $.run_query_statement,
      $.run_job_statement,
      $.drop_statement,
      $.show_statement,
      $.security_statement,
      $.grant_statement,
      $.revoke_statement,
      $.data_source_grant_statement,
      $.description_statement,
      $.row_policy_statement,
      $.install_function_statement,
      $.shell_command,
      $.stub_declaration,
    ),

    // ------------------------------------------------------------------
    // Stubs: the declarations of the built-ins, in the reference file that
    // "go to definition" opens (the equivalent of Python's `.pyi` files).
    // ------------------------------------------------------------------

    query_definition: $ => seq(
      kw('CREATE'),
      optional(seq(kw('OR'), kw('REPLACE'))),
      optional(field('modifier', choice(kw('DISTRIBUTED'), kw('TEMPLATE')))),
      choice(kw('QUERY'), kw('FUNCTION')),
      field('name', choice($.identifier, $.qualified_identifier)),
      field('parameters', $.parameter_list),
      repeat($._query_option),
      field('body', $.query_body),
    ),

    _query_option: $ => choice(
      $.for_graph_clause,
      $.returns_clause,
      $.api_clause,
      $.syntax_clause,
    ),

    syntax_clause: $ => seq(kw('SYNTAX'), versionArgument($)),

    parameter_list: $ => seq('(', commaSep($.parameter), ')'),

    query_body: $ => seq(
      '{',
      repeat(seq(choice($._statement, $.exception_declaration), ';')),
      '}',
    ),

    _statement: $ => choice(
      $.typedef_statement,
      $.virtual_edge_declaration,
      $.accumulator_declaration,
      $.variable_declaration,
      $.file_declaration,
      $.vertex_set_declaration,
      $.assignment_statement,
      $.select_statement,
      $.expression_statement,
      $.if_statement,
      $.case_statement,
      $.while_statement,
      $.foreach_statement,
      $.break_statement,
      $.continue_statement,
      $.return_statement,
      $.print_statement,
      $.insert_statement,
      $.delete_statement,
      $.update_statement,
      $.raise_statement,
      $.try_statement,
    ),

    block: $ => repeat1(seq($._statement, ';')),

    // Statements allowed inside ACCUM / POST-ACCUM / UPDATE ... SET, which
    // are comma-separated rather than semicolon-terminated.
    assignment_statement: $ => seq(
      field('left', $._assignable),
      field('operator', choice('=', '+=')),
      field('right', $._assignment_value),
    ),

    _assignable: $ => choice(
      $.identifier,
      $._soft_name,
      $.global_accumulator,
      $.local_accumulator,
      $.member_expression,
      $.subscript_expression,
    ),

    _assignment_value: $ => choice($._expression, $.select_statement),

    expression_statement: $ => $.call_expression,

    if_statement: $ => ifStatement($, $.block, $.else_if_clause, $.else_clause),

    foreach_statement: $ => foreachStatement($, $.block),

    print_statement: $ => seq(
      kw('PRINT'),
      commaSep1(choice($._expression, $.aliased_expression)),
      // `WITH TAGS` (tag-based graphs, before 4.0) prints the tags too.
      optional(seq(kw('WITH'), choice(kw('VECTOR'), kw('TAGS')))),
      optional(seq(kw('WHERE'), field('filter', $._expression))),
      optional(seq(kw('TO_CSV'), field('file', $._expression))),
    ),

    update_statement: $ => seq(
      kw('UPDATE'),
      field('alias', $.identifier),
      $.from_clause,
      kw('SET'),
      field('body', alias($.dml_block, $.block)),
      optional($.where_clause),
    ),

    from_clause: $ => seq(kw('FROM'), commaSep1(choice($.path_pattern, $.cypher_pattern))),

    // Classic (`Start:s -(Knows:e)-> Person:t`) and pattern-matching
    // (`Person:p -(Knows>)- Person -(<Likes:e)- Post:x`) syntax.
    path_pattern: $ => choice(
      seq($.vertex_pattern, optional($._edge_steps)),
      // The source vertex set may be left out: `FROM -(Likes>:e)- :msg`.
      $._edge_steps,
    ),

    // An intermediate vertex may be left out (`-(E1)- -(E2)- :x`), but only
    // when another step follows, so a vertex type at the end of a pattern
    // (such as `Order`) is never mistaken for a keyword.
    _edge_steps: $ => choice(
      seq($.edge_step, optional($._edge_steps)),
      seq(alias($._edge_hop, $.edge_step), $._edge_steps),
    ),

    vertex_pattern: $ => choice(
      seq(
        field('type', choice(
          $.identifier,
          $.global_accumulator,
          alias(kw('ANY'), $.any),
          $.wildcard,
          $.vertex_type_alternation,
        )),
        optional(seq(':', field('alias', $.identifier))),
      ),
      seq(':', field('alias', $.identifier)),
    ),

    _expression: $ => choice(
      $._primary_expression,
      $.unary_expression,
      $.binary_expression,
      $.in_expression,
      $.between_expression,
      $.like_expression,
      $.is_expression,
      $.case_expression,
      $.interval_expression,
    ),

    _primary_expression: $ => choice(
      $.identifier,
      $._soft_name,
      $.global_accumulator,
      $.local_accumulator,
      $.column_reference,
      $.integer,
      $.float,
      $.string,
      $.boolean,
      $.null,
      $.parenthesized_expression,
      $.tuple,
      $.key_value_pair,
      $.map_literal,
      $.list_literal,
      $.vertex_set_literal,
      $.type_wildcard,
      $.member_expression,
      $.call_expression,
      $.subscript_expression,
      $.range_expression,
    ),

    unary_expression: $ => choice(
      // `~` inverts the bits of a bitwise accumulator.
      prec(PREC.UNARY, seq(field('operator', choice('-', '~')), field('operand', $._expression))),
      prec(PREC.NOT, seq(field('operator', kw('NOT')), field('operand', $._expression))),
    ),

    binary_expression: $ => {
      /** @type {[number, RuleOrLiteral][]} */
      const table = [
        [PREC.OR, kw('OR')],
        [PREC.AND, kw('AND')],
        // `=` and `<>` compare in SYNTAX V3 queries.
        [PREC.COMPARE, choice('==', '!=', '<>', '=', '<', '<=', '>', '>=')],
        [PREC.UNION, choice(kw('UNION'), kw('MINUS'))],
        [PREC.INTERSECT, kw('INTERSECT')],
        [PREC.BIT_OR, '|'],
        [PREC.BIT_XOR, '^'],
        [PREC.BIT_AND, '&'],
        [PREC.SHIFT, choice('<<', '>>')],
        [PREC.ADD, choice('+', '-')],
        [PREC.MUL, choice('*', '/', '%')],
      ];
      return choice(...table.map(([precedence, operator]) => prec.left(precedence, seq(
        field('left', $._expression),
        field('operator', operator),
        field('right', $._expression),
      ))));
    },

    in_expression: $ => prec.left(PREC.COMPARE, seq(
      field('left', $._expression),
      optional(kw('NOT')),
      kw('IN'),
      field('right', $._expression),
    )),

    between_expression: $ => prec.left(PREC.COMPARE, seq(
      field('left', $._expression),
      optional(kw('NOT')),
      kw('BETWEEN'),
      field('low', $._expression),
      kw('AND'),
      field('high', $._expression),
    )),

    like_expression: $ => prec.left(PREC.COMPARE, seq(
      field('left', $._expression),
      optional(kw('NOT')),
      kw('LIKE'),
      field('pattern', $._expression),
      optional(seq(kw('ESCAPE'), field('escape', $._expression))),
    )),

    is_expression: $ => prec.left(PREC.COMPARE, seq(
      field('left', $._expression),
      kw('IS'),
      optional(kw('NOT')),
      field('right', choice($.null, kw('EMPTY'), kw('NUMERIC'))),
    )),

    interval_expression: $ => seq(
      kw('INTERVAL'),
      field('value', $._expression),
      field('unit', choice(
        kw('YEAR'),
        kw('MONTH'),
        kw('DAY'),
        kw('HOUR'),
        kw('MINUTE'),
        kw('SECOND'),
      )),
    ),

    tuple: $ => seq($._tuple_head, ')'),

    // `(key -> value)` for MapAccum, `(k1, k2 -> a1, a2)` for GroupByAccum.
    key_value_pair: $ => seq($._tuple_head, '->', commaSep1($._expression), ')'),

    // `("a" -> 1, "b" -> 2)`: the value of a MAP attribute.
    map_literal: $ => seq('(', $.map_entry, repeat1(seq(',', $.map_entry)), ')'),

    map_entry: $ => seq(field('key', $._expression), '->', field('value', $._expression)),

    _tuple_head: $ => seq('(', commaSep1($._expression)),

    list_literal: $ => seq('[', commaSep($._expression), ']'),

    // Vertex-set seed: `{p}`, `{Person.*}`, `{ANY}`, `{@@set}`; also the
    // `{key: value}` options of functions such as vectorSearch.
    vertex_set_literal: $ => seq(
      '{',
      commaSep(choice($._expression, alias(kw('ANY'), $.any), $.wildcard, $.pair)),
      '}',
    ),

    // `{key: value}`; JSON arguments of RUN QUERY quote the key.
    pair: $ => seq(field('key', choice($.identifier, $.string)), ':', field('value', $._expression)),

    type_wildcard: $ => prec(PREC.POSTFIX, seq(
      field('type', $._primary_expression),
      '.',
      '*',
    )),

    member_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', $._primary_expression),
      '.',
      field('property', choice($.identifier, $.local_accumulator)),
      optional(field('prime', "'")),
    )),

    call_expression: $ => prec(PREC.POSTFIX, seq(
      // `range(1, 10, 2)` is a function; `RANGE[1, 10]` a range expression.
      field('function', choice($._primary_expression, alias(kw('RANGE'), $.identifier))),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq(
      '(',
      optional(field('modifier', choice(
        kw('DISTINCT'),
        kw('LEADING'),
        kw('TRAILING'),
        kw('BOTH'),
      ))),
      // `_` passes a query its default value: `RUN QUERY q(21, _)`.
      commaSep(choice($._expression, alias('*', $.wildcard), $.wildcard, $.from_argument)),
      ')',
    ),

    // `trim(LEADING " " FROM s)`
    from_argument: $ => seq(optional($._expression), kw('FROM'), $._expression),

    global_accumulator: _ => /@@[A-Za-z_][A-Za-z0-9_]*/,

    local_accumulator: _ => /@[A-Za-z_][A-Za-z0-9_]*/,

    // `$0`, `$"name"` and `$sys.file_name` column references in loading jobs.
    integer: _ => /\d+/,

    float: _ => token(choice(
      /\d+\.\d+([eE][+-]?\d+)?/,
      /\.\d+([eE][+-]?\d+)?/,
      /\d+[eE][+-]?\d+/,
    )),

    string: $ => choice(
      seq(
        '"',
        repeat(choice($.string_content, $.escape_sequence)),
        token.immediate('"'),
      ),
      // `"""{ "type": "s3" }"""`: JSON configuration of data sources and file
      // names, which may span lines and contain quotes.
      token(prec(1, seq('"""', /([^"]|"[^"]|""[^"])*/, '"""'))),
    ),

    string_content: _ => token.immediate(prec(1, /[^"\\]+/)),

    escape_sequence: _ => token.immediate(/\\(.|\r?\n)/),

    boolean: _ => choice(/true/i, /false/i),

    null: _ => /null/i,

    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
  },
});
